# Orbox4A

./: Application.cpp  Application.h  CMakeLists.txt  Descriptors100c.xml  Descriptors100cAll.xml  Descriptors10c.xml  Descriptors10cAll.xml  Descriptors1c.xml  Descriptors1cAll.xml  Descriptors200c.xml  Descriptors200cAll.xml  Descriptors20c.xml  Descriptors20cAll.xml  Descriptors2c.xml  Descriptors2cAll.xml  Descriptors50c.xml  Descriptors50cAll.xml  Descriptors5c.xml  Descriptors5cAll.xml  OrboxConfig.xml  Parameters.cpp  Parameters.h  Results.txt  main.cpp
Data/: Descriptors100c.xml  Descriptors100cAll.xml  Descriptors10c.xml  Descriptors10cAll.xml  Descriptors1c.xml  Descriptors1cAll.xml  Descriptors200c.xml  Descriptors200cAll.xml  Descriptors20c.xml  Descriptors20cAll.xml  Descriptors2c.xml  Descriptors2cAll.xml  Descriptors50c.xml  Descriptors50cAll.xml  Descriptors5c.xml  Descriptors5cAll.xml
Data/CheckBoard/: CameraParameter.xml  ConfigCalib.xml  ImageList.xml
